--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,6 +32,6 @@ jobs:
         TWINE_USERNAME: ${{secrets.PYPI_USERNAME}}
         TWINE_PASSWORD: ${{secrets.PYPI_PASSWORD}}
       run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+        python3 setup.py sdist
+        twine upload --repository-url https://upload.pypi.org/legacy/ dist/* 
     
